alignment fixes

--- a/src/containers/Market/MarketDetails/index.less
+++ b/src/containers/Market/MarketDetails/index.less
@@ -76,6 +76,21 @@
             }
             .ant-list{
                 padding: 18px 20px;
+                min-height: 105px;
+                .ant-list-item {
+                    h3 {
+                        display: block;
+                        margin-top: 6px;
+                    }
+                    .distribution-btn-row{
+                        position: absolute;
+                    }
+                    .distribution-apy-button{
+                        margin-top: 3px !important;
+                        margin-right: 3px;
+                        margin-left: 0;
+                    }
+                }
             }
         }
     }
